--- a/package.json
+++ b/package.json
@@ -10,23 +10,29 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
-  "keywords": ["openpay", "express", "middleware", "payments"],
+  "keywords": [
+    "openpay",
+    "express",
+    "middleware",
+    "payments"
+  ],
   "author": "Tu Nombre",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "openpay": "^1.0.0",
-    "dotenv": "^16.3.1",
+    "axios": "^1.12.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "morgan": "^1.10.0",
-    "compression": "^1.7.4"
+    "openpay": "^1.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   },
   "engines": {
