--- a/env.example
+++ b/env.example
@@ -16,3 +16,16 @@ API_RATE_LIMIT=100
 
 # URL base para webhooks
 WEBHOOK_BASE_URL=http://localhost:3000
+
+# Configuración de Directus
+DIRECTUS_URL=https://tu-directus-instance.com
+WEBHOOK_TOKEN=tu_webhook_token_aqui
+
+# Configuración de correo electrónico
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=tu_email@gmail.com
+SMTP_PASS=tu_password_de_aplicacion
+SMTP_FROM=noreply@tu-dominio.com
+SMTP_SECURE=false
+SMTP_IGNORE_TLS=false
